# brainstemx-full

./: .PYTHON_VERSION  .gitignore  .shellcheckrc  00_environment_functions.sh  BUGS_FOUND.md  CLAUDE.md  LICENSE  README.md  backtrace_to_dicom.py  extract_dicom_metadata_old.py  extract_dicom_metadata_old2.py  pipeline.sh  processing_script.sh  pyproject.toml  pyvenv.cfg  requirements.txt  resume_after_nifti.sh  run_example.sh  run_pipeline.sh  streamlit.py
config/: codex_environment.sh  default_config.sh  dicom2_comprehensive_fix.sh  dicom2_config.sh  dicom2_runtime_patches.sh  interactive_test.sh  parallel_config.sh  test_config.sh
docs/: BUGS_FOUND.md  CRITICAL_PROJECT_REVIEW.md  README.md  README_reference_space_selection.md  README_scan_selection.md  README_tests.md  TECHNICAL_OVERVIEW.md  adaptive_reference_space_selection_plan.md  ants-output-improvement-plan.md  brainstem_freesurfer_segmentation_spec.md  complete_pipeline_analysis_and_fix_plan.md  dicom_cluster_mapping_implementation.md  ds004199_validation_dataset.md  fslmaths-gradient-issue.md  implementation_plan.md  implementation_plan_new.md  longitudinal_multisession_spec.md  map-nifti-to-dicom-slices.md  modularization_plan.md  module_integration_improvements.md  multi_atlas_integration_spec.md  multiaxis_improvements.md  orientation-distortion-correction.md  output_structure.md  parallel_processing_implementation.md  parallel_processing_restoration.md  pipeline-explanatory-output-plan.md  pipeline_architecture_review_plan.md  planned_improvements_1a.md  registration_enhancement_plan.md  sample_implementation.md  scan-selection-modes.md  segmentation_analysis.md  sota-comparison.md  streamlit_integration_plan.md  synthetic_test_data.md  workflow.md
modules/: analysis.sh  analyze_multimodal_brainstem.sh  dicom_analysis.sh  enhanced_registration_validation.sh  environment.sh  extract_dicom_metadata.py  fast_wrapper.sh  fix_siemens_headers.py  import.sh  import_extract_metadata.sh  import_vendor_specific.sh  orientation_correction.sh  preprocess.sh  qa.sh  registration.sh  segment_brainstem.sh  segment_pons_dorsal_ventral.py  segment_pons_suitlib.py  segmentation.sh  utils.sh  visualization.sh
old_scripts/: 00_environment_functions.sh
scripts/: run_ds004199_validation.sh
src/: backtrace_to_dicom.py  fix_dcm2niix_duplicates.sh  longitudinal.sh  main.py  pipeline.sh  scan_selection.sh
streamlit_app/: Home.py
tests/: mock_pipeline.sh  run_reference_space_test.sh  run_segmentation_tests.sh  test_atlas_positioning_fix.sh  test_atlas_positioning_validation.sh  test_brain_extraction_fix.sh  test_complete_pipeline_fixes.sh  test_contrast_matched_registration_unit.sh  test_cross_modal_unit.sh  test_dependency_report_unit.sh  test_dicom_analysis.sh  test_dicom_mapping_integration.sh  test_environment_unit.sh  test_fp_filter_unit.sh  test_gmm_threshold.py  test_helpers.sh  test_import_comparison.sh  test_import_unit.sh  test_integration.sh  test_interactive_selection.sh  test_map_clusters_to_dicom.py  test_multi_atlas_unit.sh  test_orientation_fix.sh  test_orientation_preservation.sh  test_original_detection.sh  (+10 more)
(+77 files in other folders)
