[project]
name = "brainstemx-full"
version = "0.1.1"
description = "Anomaly detection within the human brainstem - a research project"
readme = "README.md"
requires-python = "==3.12.8"
dependencies = [
    # Core dependencies used by Python modules and inline Python in bash scripts
    "nibabel>=5.3.2",       # extract_voxel_values.py, morphological_geodesic_active_contour.py, analyze_multimodal_brainstem.sh
    "numpy>=2.0.0",         # extract_voxel_values.py, morphological_geodesic_active_contour.py, analysis.sh, analyze_multimodal_brainstem.sh
    "pandas>=2.0.0",        # analyze_multimodal_brainstem.sh (inline Python)
    "pydicom>=3.0.1",       # extract_dicom_metadata.py
    "scikit-image>=0.25.0", # morphological_geodesic_active_contour.py
    "scikit-learn>=1.5.0",  # analysis.sh (inline GMM analysis)
    "scipy>=1.14.0",        # morphological_geodesic_active_contour.py
]

[project.optional-dependencies]
dev = [
    "pylint>=4.0.0",
    "isort>=6.0.0",
]
