[project]
name = "brainstemx-full"
version = "0.1.1"
description = "Anomaly detection within the human brainstem - a research project"
readme = "README.md"
requires-python = "==3.12.8"
dependencies = [
    # Core dependencies used by Python modules and inline Python in bash scripts
    "nibabel>=5.3.2",       # gmm_threshold.py, analyze_multimodal_brainstem.sh
    "numpy>=2.0.0",         # gmm_threshold.py, analyze_multimodal_brainstem.sh
    "pandas>=2.0.0",        # analyze_multimodal_brainstem.sh (inline Python)
    "pydicom>=3.0.1",       # extract_dicom_metadata.py
    "pytest>=9.0.2",
    "scikit-learn>=1.5.0",  # gmm_threshold.py (per-region GMM analysis)
]

[project.optional-dependencies]
dev = [
    "pylint>=4.0.0",
    "isort>=6.0.0",
    "pytest>=8.0.0",
]
