[project]
name = "brainstemx-full"
version = "0.1.1"
description = "Anomaly detection within the human brainstem - a research project"
readme = "README.md"
requires-python = "==3.12.8"
dependencies = [
    "antspynet>=0.2.3",
    "antspyx>=0.5.3",
    "colorama==0.4.6 ; sys_platform == 'win32'",
    # Core dependencies used by Python modules and inline Python in bash scripts
    "iniconfig==2.3.0",
    "joblib==1.5.3",
    "nibabel==5.4.2",       # gmm_threshold.py, analyze_multimodal_brainstem.sh
    "numpy==2.5.1",         # gmm_threshold.py, analyze_multimodal_brainstem.sh
    "packaging==26.2",
    "pandas==3.0.3",        # analyze_multimodal_brainstem.sh (inline Python)
    "pip>=26.1.2",
    "pluggy==1.6.0",
    "pydicom==3.0.2",       # extract_dicom_metadata.py
    "pygments==2.20.0",
    "pytest==9.1.1",
    "python-dateutil==2.9.0.post0",
    "scikit-learn==1.9.0",  # gmm_threshold.py (per-region GMM analysis)
    "scipy==1.18.0",
    "six==1.17.0",
    "threadpoolctl==3.6.0",
    "tzdata==2026.3 ; sys_platform == 'emscripten' or sys_platform == 'win32'",
    "typing-extensions==4.16.0",
]

[project.optional-dependencies]
dev = [
    "pylint>=4.0.0",
    "isort>=6.0.0",
    "pytest>=8.0.0",
]
